<resources>
    <string name="app_name">Project5</string>
    <string name="ru_cafe">RU CAFE</string>
    <string name="donut">Donut</string>
    <string name="coffee">Coffee</string>
    <string name="basket">Basket</string>
    <string name="orders">Orders</string>
    <string name="donutsTitle">DONUTS</string>
    <string name="coffeeTitle">COFFEE</string>
    <string name="basketTitle">BASKET</string>
    <string name="ordersTitle">ORDERS</string>
    <string name="type">Type</string>
    <string name="todo">TODO</string>
    <string name="type1">Type</string>
    <string name="numflavors">NumFlavors</string>
    <string name="return_to_menu">Return to Menu</string>
    <string name="typeSelect">TextView</string>
    <string name="subtotal">Subtotal: </string>
    <string name="donutSubPrice">0.00</string>
    <string name="basket_subtotal">Subtotal: $0.00</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="coffeeListTitle">Coffee</string>
    <string name="sweetCream">Sweet Cream</string>
    <string name="french_vanilla">French Vanilla</string>
    <string name="irish_cream">Irish Cream</string>
    <string name="caramel">Caramel</string>
    <string name="mocha">Mocha</string>
    <string name="item_name">Item Name</string>
    <string name="_0_00">$0.00</string>
    <string name="sales_tax_0_00">Sales Tax: $0.00</string>
    <string name="total_cost_0_00">Total Cost: $0.00</string>
    <string name="add_to_orders">Add to Orders</string>
    <string name="remove_item">Remove Item</string>
    <string-array name="coffeeSize">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>
    <string-array name="coffeeCount">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>