<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/donutIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:src="@drawable/yeast"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/donutTyoe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/donutIcon"
        android:text="@string/type1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dountTypeNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:layout_toEndOf="@+id/donutIcon"
        android:text="@string/numflavors"
        android:textColor="#595858" />
</RelativeLayout>