<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasketActivity">

    <ListView
        android:id="@+id/basketListView"
        android:choiceMode="singleChoice"
        android:listSelector="#666666"
        android:layout_width="393dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="41dp"
        app:layout_constraintBottom_toTopOf="@+id/basketSalexTax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menu3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="26dp"
        android:text="@string/return_to_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketListView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/basketSubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="15dp"
        android:text="@string/basket_subtotal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/basketTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketListView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/basketSalexTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="15dp"
        android:text="@string/sales_tax_0_00"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/basketTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketListView" />

    <TextView
        android:id="@+id/basketTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="34dp"
        android:text="Total Cost: $0.00"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/removeItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketSalexTax" />

    <Button
        android:id="@+id/addOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="25dp"
        android:text="@string/add_to_orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeItem" />

    <Button
        android:id="@+id/removeItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="34dp"
        android:text="@string/remove_item"
        app:layout_constraintBottom_toTopOf="@+id/addOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketTotal" />

</androidx.constraintlayout.widget.ConstraintLayout>